--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:ignore="MissingLeanbackLauncher">
+        xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-feature
+            android:name="android.hardware.touchscreen"
+            android:required="false" />
+    <uses-feature
+            android:name="android.software.leanback"
+            android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,14 +24,6 @@
             tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
-    <uses-feature
-            android:name="android.software.leanback"
-            android:required="false" />
-
-    <uses-feature
-            android:name="android.hardware.touchscreen"
-            android:required="false" />
-
     <application
             android:name=".App"
             android:allowBackup="true"
@@ -37,7 +35,8 @@
             android:banner="@mipmap/ic_launcher"
             android:allowNativeHeapPointerTagging="false"
             android:networkSecurityConfig="@xml/network_security_config"
-            android:theme="@style/Theme.AllOfTV">
+            android:theme="@style/Theme.AllOfTV"
+            android:usesCleartextTraffic="true">
 
         <activity
                 android:name=".ui.SplashActivity"
@@ -46,6 +45,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
 
