--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,11 +102,17 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation "androidx.annotation:annotation:1.5.0"
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.11"
+    implementation 'com.kingja.loadsir:loadsir:1.3.8'
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'me.jessyan:autosize:1.2.1'
+    implementation 'com.owen:tv-recyclerview:3.0.0'
 
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.github.jeasonlzy.okhttp-OkGo:okgo:v3.0.4'
