--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
@@ -51,6 +52,10 @@
 
         <activity
                 android:name=".ui.MainActivity"
+                android:screenOrientation="sensorLandscape" />
+
+        <activity
+                android:name=".ui.DetailActivity"
                 android:screenOrientation="sensorLandscape" />
 
         <meta-data
