--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,23 +94,23 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    implementation "androidx.annotation:annotation:1.5.0"
+    implementation 'androidx.annotation:annotation:1.6.0'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.11"
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'me.jessyan:autosize:1.2.1'
     implementation 'com.owen:tv-recyclerview:3.0.0'
 
@@ -121,7 +121,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.squareup.okio:okio:3.3.0'
 
-    implementation 'io.github.azhon:appupdate:4.2.6'
+    implementation 'io.github.azhon:appupdate:4.2.8'
     implementation 'com.tencent.tbs:tbssdk:44275'
 
     // Picasso
@@ -131,7 +131,7 @@ dependencies {
     implementation 'com.github.thomper:sweet-alert-dialog:1.4.0'
     implementation 'com.github.GrenderG:Toasty:1.5.2'
 
-    implementation 'io.github.billywei01:fastkv:1.1.3'
+    implementation 'io.github.billywei01:fastkv:1.1.4'
 
     implementation 'me.jessyan:autosize:1.2.1'
     implementation 'com.github.yhyzgn:Evtor:2.0.1'
@@ -141,9 +141,9 @@ dependencies {
 
     annotationProcessor 'com.github.yhyzgn.EasyRouter:router-compiler:2.0.1'
 
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     androidTestImplementation 'androidx.test:core:1.5.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
