--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,27 @@
 
         <activity
                 android:name=".ui.DetailActivity"
-                android:screenOrientation="sensorLandscape" />
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+                android:screenOrientation="fullSensor" />
 
+        <service
+                android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
+                android:label="dexopt"
+                android:process=":dexopt" />
+
+        <uses-library
+                android:name="android.test.runner"
+                android:required="false" />
+        <uses-library
+                android:name="android.test.base"
+                android:required="false" />
+        <uses-library
+                android:name="android.test.mock"
+                android:required="false" />
+
+        <meta-data
+                android:name="android.max_aspect"
+                android:value="2.1" />
         <meta-data
                 android:name="design_width_in_dp"
                 android:value="1280" />
