--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -19,24 +20,20 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew build
 
     - name: Build with Gradle
-      run: chmod +x gradlew
-    - name: Build with Gradle
       run: ./gradlew assembleRelease
       
     - name: Create release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: ${{ github.ref }}
-        draft: false
-        prerelease: false
- 
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: "app/build/outputs/apk/release/*.apk"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
     - uses: actions/checkout@v1
       id: cache
       with:
@@ -46,6 +43,8 @@ jobs:
         
     - name: install fir.im
       run: sudo gem install fir-cli
+
     - name: Upload to Fir.im
-      run: fir login ${{ secrets.FIR_TOKEN }}
-    - run: fir publish app/build/outputs/apk/release/全剧得_v${{ github.ref }}.apk
+      run: |
+        fir login ${{ secrets.FIR_TOKEN }}
+        fir publish app/build/outputs/apk/release/全剧得_*.apk
