--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,6 +39,7 @@ jobs:
       
     - name: Create release
       uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: "app/build/outputs/apk/release/*.apk"
         token: ${{ secrets.GITHUB_TOKEN }}
