--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,52 +9,45 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set Env
-      run: |
-        echo "runNumber=$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
-        echo "tagName=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+      - name: Set Env
+        run: |
+          echo "runNumber=$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
+          echo "tagName=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
 
-    - name: Resolve Version
-      run: |
-        sed -i "s/code: [0-9]+$/code: ${{ env.runNumber }}/g" config.gradle
-        sed -i "s/name: v[0-9\\.]+$/name: ${{ env.tagName }}/g" config.gradle
+      - name: Resolve Version
+        run: |
+          sed -i "s/code: [0-9]+$/code: ${{ env.runNumber }}/g" config.gradle
+          sed -i "s/name: v[0-9\\.]+$/name: ${{ env.tagName }}/g" config.gradle
 
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+      - name: set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Build with Gradle
+        run: ./gradlew build
 
-    - name: Build with Gradle
-      run: ./gradlew assembleRelease
-      
-    - name: Create release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: "app/build/outputs/apk/release/*.apk"
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release with Gradle
+        run: ./gradlew assembleRelease
 
-    - uses: actions/checkout@v1
-      id: cache
-      with:
-        path: ~/local/rubies
-        key: ruby-2.6.5
-        clean: false
-        
-    - name: install fir.im
-      run: sudo gem install fir-cli
+      - uses: actions/checkout@v1
+        id: cache
+        with:
+          path: ~/local/rubies
+          key: ruby-2.6.5
+          clean: false
 
-    - name: Upload to Fir.im
-      run: |
-        fir login ${{ secrets.FIR_TOKEN }}
-        fir publish app/build/outputs/apk/release/全剧得_*.apk
+      - name: install fir.im
+        run: sudo gem install fir-cli
+
+      - name: Upload to Fir.im
+        run: |
+          fir login ${{ secrets.FIR_TOKEN }}
+          fir publish app/build/outputs/apk/release/全剧得_*.apk
