--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,5 @@ org.gradle.daemon=true
 org.gradle.unsafe.configuration-cache=true
 # Use this flag carefully, in case some of the plugins are not fully compatible.
 org.gradle.unsafe.configuration-cache-problems=warn
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
