--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,12 +72,12 @@ android {
     packagingOptions {
         jniLibs {
             excludes += ['META-INF/*']
+            pickFirsts += ['lib/*/*.so']
         }
         resources {
             excludes += ['META-INF/*']
         }
 
-        pickFirst 'lib/*/*.so'
     }
 
     // 打包apk自动生成名称
