--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,7 +20,6 @@ jobs:
           echo "runNumber=$GITHUB_RUN_NUMBER" >> $GITHUB_ENV
           echo "tagName=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
           echo "previousTagName=`echo $(git --no-pager tag --sort=creatordate --merged ${{ github.ref_name }} | tail -2 | head -1)`" >> $GITHUB_ENV
-          echo runNumber = ${{ env.runNumber }}, tagName = ${{ env.tagName }}, previousTagName = ${{ env.previousTagName }}
 
       - name: Update ChangeLog
         id: changeLog
@@ -30,6 +29,7 @@ jobs:
           fromTag: ${{ env.tagName }}
           toTag: ${{ env.previousTagName }}
           writeToFile: false
+          includeInvalidCommits: true
 
       - name: Resolve Version
         run: |
