--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,6 +30,7 @@ jobs:
           toTag: ${{ env.previousTagName }}
           writeToFile: false
           includeInvalidCommits: true
+          excludeTypes: ""
 
       - name: Resolve Version
         run: |
@@ -53,7 +54,7 @@ jobs:
         run: ./gradlew assembleRelease
 
       - name: Create Github Release
-        uses: ncipollo/release-action@v1.12.0
+        uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           draft: true
@@ -61,7 +62,6 @@ jobs:
           name: ${{ env.tagName }}
           body: ${{ steps.changelog.outputs.changes }}
           artifacts: app/build/outputs/apk/release/全剧得_*.apk
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/checkout@v1
         id: cache
