--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           sed -i "s/code: [0-9]+$/code: ${{ env.runNumber }}/g" config.gradle
           sed -i "s/name: v[0-9\\.]+$/name: ${{ env.tagName }}/g" config.gradle
+          echo "apkName=全剧得_`echo ${{ env.tagName }}_${{ env.runNumber }}`.apk" >> $GITHUB_ENV
 
       - name: set up JDK 17
         uses: actions/setup-java@v3
@@ -61,7 +62,7 @@ jobs:
           makeLatest: true
           name: ${{ env.tagName }}
           body: ${{ steps.changelog.outputs.changes }}
-          artifacts: app/build/outputs/apk/release/全剧得_*.apk
+          artifacts: "app/build/outputs/apk/release/${{ env.tagName }}"
           token: ${{ secrets.RELEASE_TOKEN }}
 
       - uses: actions/checkout@v1
@@ -77,4 +78,4 @@ jobs:
       - name: Upload to Fir.im
         run: |
           fir login ${{ secrets.FIR_TOKEN }}
-          fir publish app/build/outputs/apk/release/全剧得_*.apk -c ${{ steps.changelog.outputs.changes }}
+          fir publish "app/build/outputs/apk/release/${{ env.tagName }}" -c "${{ steps.changelog.outputs.changes }}"
