--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,9 +34,10 @@ jobs:
 
       - name: Resolve Version
         run: |
-          sed -i "s/code: [0-9]+$/code: ${{ env.runNumber }}/g" config.gradle
-          sed -i "s/name: v[0-9\\.]+$/name: ${{ env.tagName }}/g" config.gradle
+          sed -i -r "s/code: [0-9]+/code: ${{ env.runNumber }}/g" config.gradle
+          sed -i -r "s/name: 'v[0-9\\.]+'/name: '${{ env.tagName }}'/g" config.gradle
           echo "apkName=全剧得_`echo ${{ env.tagName }}_${{ env.runNumber }}`.apk" >> $GITHUB_ENV
+          cat config.gradle
 
       - name: set up JDK 17
         uses: actions/setup-java@v3
@@ -52,7 +53,9 @@ jobs:
         run: ./gradlew build
 
       - name: Release with Gradle
-        run: ./gradlew assembleRelease
+        run: |
+          ./gradlew assembleRelease
+          ls app/build/outputs/apk/release/
 
       - name: Create Github Release
         uses: ncipollo/release-action@v1
@@ -78,4 +81,4 @@ jobs:
       - name: Upload to Fir.im
         run: |
           fir login ${{ secrets.FIR_TOKEN }}
-          fir publish app/build/outputs/apk/release/*.apk -c "${{ steps.changelog.outputs.changes }}"
+          fir publish app/build/outputs/apk/release/*.apk -c "${{ steps.changelog.outputs.changes }}" --force-pin-history --open
