--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,29 +114,19 @@ dependencies {
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
     implementation 'me.jessyan:autosize:1.2.1'
     implementation 'com.owen:tv-recyclerview:3.0.0'
-
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'com.github.jeasonlzy.okhttp-OkGo:okgo:v3.0.4'
-
-    // OkHttp
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.squareup.okio:okio:3.3.0'
-
     implementation 'io.github.azhon:appupdate:4.2.8'
     implementation 'com.tencent.tbs:tbssdk:44275'
-
-    // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'com.github.GrenderG:Toasty:1.5.2'
-
     implementation 'io.github.billywei01:fastkv:1.1.4'
-
-    implementation 'me.jessyan:autosize:1.2.1'
     implementation 'com.github.yhyzgn:Evtor:2.0.1'
     implementation 'com.github.yhyzgn.EasyRouter:router:2.0.1'
 
-    implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.3.5-release-jitpack'
+    implementation project(':player')
 
     annotationProcessor 'com.github.yhyzgn.EasyRouter:router-compiler:2.0.1'
 
