--- a/settings.gradle
+++ b/settings.gradle
@@ -1,21 +1,20 @@
 pluginManagement {
     repositories {
-        google()
-        mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://maven.aliyun.com/repository/public" }
-        maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
+        mavenCentral()
+        google()
         gradlePluginPortal()
     }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        google()
-        mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://maven.aliyun.com/repository/public" }
-        maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
+        mavenCentral()
+        google()
+        gradlePluginPortal()
     }
 }
 
