--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ android {
     // 打包apk自动生成名称
     android.applicationVariants.all { variant ->
         variant.outputs.all { output ->
-            outputFileName = "全剧得_${defaultConfig.versionName}_${defaultConfig.versionCode}.apk"
+            outputFileName = "AllOfTV_${defaultConfig.versionName}_${defaultConfig.versionCode}.apk"
         }
     }
 
