--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,7 +62,7 @@ jobs:
           allowUpdates: false
           draft: false
           makeLatest: true
-          name: `${{ env.tagName }}_${{ env.runNumber }}`
+          name: ${{ env.tagName }}_${{ env.runNumber }}
           body: ${{ steps.changelog.outputs.changes }}
           artifacts: app/build/outputs/apk/release/*.apk
           token: ${{ secrets.RELEASE_TOKEN }}
