perf:集成 Bugly 模块

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,4 @@ org.gradle.unsafe.configuration-cache=true
 org.gradle.unsafe.configuration-cache-problems=warn
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
+android.useDeprecatedNdk=true
