--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,7 @@ dependencies {
     implementation 'com.youbenzi:MDTool:1.2.4'
     implementation 'com.github.binarywang:java-emoji-converter:1.0.2'
     implementation 'com.daimajia.numberprogressbar:library:1.4'
+    implementation 'com.tencent.bugly:crashreport:4.1.9.2'
 
     implementation project(':player')
 
