--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:banner="@mipmap/ic_launcher"
+            android:banner="@mipmap/ic_banner"
             android:allowNativeHeapPointerTagging="false"
             android:networkSecurityConfig="@xml/network_security_config"
             android:theme="@style/Theme.AllOfTV"
