--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.6.0'
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'androidx.leanback:leanback:1.0.0'
+    implementation "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.14"
     implementation 'com.kingja.loadsir:loadsir:1.3.8'
@@ -133,7 +134,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.squareup.okio:okio:3.3.0'
     implementation 'io.github.azhon:appupdate:4.2.8'
-    implementation 'com.tencent.tbs:tbssdk:44275'
+    implementation 'com.tencent.tbs:tbssdk:44286'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.GrenderG:Toasty:1.5.2'
     implementation 'io.github.billywei01:fastkv:1.1.4'
