--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,9 +79,6 @@ android {
     }
 
     // 在 Android 构建流程中 AAPT 会使用内置的压缩算法来优化 res/drawable/ 目录下的 PNG 图片，但也可能会导致本来已经优化过的图片体积变大
-    aaptOptions {
-        cruncherEnabled false
-    }
 
     packagingOptions {
         jniLibs {
@@ -145,6 +142,8 @@ dependencies {
     implementation 'com.github.binarywang:java-emoji-converter:1.0.2'
     implementation 'com.daimajia.numberprogressbar:library:1.4'
     implementation 'com.tencent.bugly:crashreport:4.1.9.2'
+    implementation 'org.jsoup:jsoup:1.16.1'
+    implementation 'io.github.taoweiji.quickjs:quickjs-android:1.3.0'
 
     implementation project(':player')
 
