--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -65,3 +65,4 @@ jobs:
           name: ${{ env.tagName }}_${{ env.runNumber }}
           body: ${{ steps.changelog.outputs.changes }}
           artifacts: app/build/outputs/apk/release/*.apk
+          token: ${{ secrets.GITHUB_TOKEN }}
