--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write-all
+      contents: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
